test/Fail/Erased-modules-9.err
Erased-modules-9.agda:11.3-39: error: [NotSupported]
Not supported: open public in hard compile-time mode (for instance
in erased modules)
